include/client.h


typedef struct mpv_handle mpv_handle;
typedef enum mpv_error {
    MPV_ERROR_SUCCESS           = 0,
    MPV_ERROR_EVENT_QUEUE_FULL  = -1,
    MPV_ERROR_NOMEM             = -2,
    MPV_ERROR_UNINITIALIZED     = -3,
    MPV_ERROR_INVALID_PARAMETER = -4,
    MPV_ERROR_OPTION_NOT_FOUND  = -5,
    MPV_ERROR_OPTION_FORMAT     = -6,
    MPV_ERROR_OPTION_ERROR      = -7,
    MPV_ERROR_PROPERTY_NOT_FOUND = -8,
    MPV_ERROR_PROPERTY_FORMAT   = -9,
    MPV_ERROR_PROPERTY_UNAVAILABLE = -10,
    MPV_ERROR_PROPERTY_ERROR    = -11,
    MPV_ERROR_COMMAND           = -12,
    MPV_ERROR_LOADING_FAILED    = -13,
    MPV_ERROR_AO_INIT_FAILED    = -14,
    MPV_ERROR_VO_INIT_FAILED    = -15,
    MPV_ERROR_NOTHING_TO_PLAY   = -16,
    MPV_ERROR_UNKNOWN_FORMAT    = -17,
    MPV_ERROR_UNSUPPORTED       = -18,
    MPV_ERROR_NOT_IMPLEMENTED   = -19,
    MPV_ERROR_GENERIC           = -20
} mpv_error;
typedef enum mpv_format {
    MPV_FORMAT_NONE             = 0,
    MPV_FORMAT_STRING           = 1,
    MPV_FORMAT_OSD_STRING       = 2,
    MPV_FORMAT_FLAG             = 3,
    MPV_FORMAT_INT64            = 4,
    MPV_FORMAT_DOUBLE           = 5,
    MPV_FORMAT_NODE             = 6,
    MPV_FORMAT_NODE_ARRAY       = 7,
    MPV_FORMAT_NODE_MAP         = 8,
    MPV_FORMAT_BYTE_ARRAY       = 9
} mpv_format;
typedef struct mpv_node {
    union {
        char *string;   
        int flag;       
        int64_t int64;  
        double double_; 
        struct mpv_node_list *list;
        struct mpv_byte_array *ba;
    } u;
    mpv_format format;
} mpv_node;
typedef struct mpv_node_list {
    int num;
    mpv_node *values;
    char **keys;
} mpv_node_list;
typedef struct mpv_byte_array {
    void *data;
    size_t size;
} mpv_byte_array;
void mpv_free_node_contents(mpv_node *node);
int mpv_observe_property(mpv_handle *mpv, uint64_t reply_userdata,
                         const char *name, mpv_format format);
int mpv_unobserve_property(mpv_handle *mpv, uint64_t registered_reply_userdata);
typedef enum mpv_event_id {
    MPV_EVENT_NONE              = 0,
    MPV_EVENT_SHUTDOWN          = 1,
    MPV_EVENT_LOG_MESSAGE       = 2,
    MPV_EVENT_GET_PROPERTY_REPLY = 3,
    MPV_EVENT_SET_PROPERTY_REPLY = 4,
    MPV_EVENT_COMMAND_REPLY     = 5,
    MPV_EVENT_START_FILE        = 6,
    MPV_EVENT_END_FILE          = 7,
    MPV_EVENT_FILE_LOADED       = 8,
#if MPV_ENABLE_DEPRECATED
    MPV_EVENT_TRACKS_CHANGED    = 9,
    MPV_EVENT_TRACK_SWITCHED    = 10,
    MPV_EVENT_IDLE              = 11,
    MPV_EVENT_PAUSE             = 12,
    MPV_EVENT_UNPAUSE           = 13,
    MPV_EVENT_TICK              = 14,
    MPV_EVENT_SCRIPT_INPUT_DISPATCH = 15,
#endif
    MPV_EVENT_CLIENT_MESSAGE    = 16,
    MPV_EVENT_VIDEO_RECONFIG    = 17,
    MPV_EVENT_AUDIO_RECONFIG    = 18,
#if MPV_ENABLE_DEPRECATED
    MPV_EVENT_METADATA_UPDATE   = 19,
#endif
    MPV_EVENT_SEEK              = 20,
    MPV_EVENT_PLAYBACK_RESTART  = 21,
    MPV_EVENT_PROPERTY_CHANGE   = 22,
#if MPV_ENABLE_DEPRECATED
    MPV_EVENT_CHAPTER_CHANGE    = 23,
#endif
    MPV_EVENT_QUEUE_OVERFLOW    = 24,
    MPV_EVENT_HOOK              = 25,
} mpv_event_id;
const char *mpv_event_name(mpv_event_id event);
typedef struct mpv_event_property {
    const char *name;
    mpv_format format;
    void *data;
} mpv_event_property;
typedef enum mpv_log_level {
    MPV_LOG_LEVEL_NONE  = 0,    
    MPV_LOG_LEVEL_FATAL = 10,   
    MPV_LOG_LEVEL_ERROR = 20,   
    MPV_LOG_LEVEL_WARN  = 30,   
    MPV_LOG_LEVEL_INFO  = 40,   
    MPV_LOG_LEVEL_V     = 50,   
    MPV_LOG_LEVEL_DEBUG = 60,   
    MPV_LOG_LEVEL_TRACE = 70,   
} mpv_log_level;
typedef struct mpv_event {
    mpv_event_id event_id;
    int error;
    uint64_t reply_userdata;
    void *data;
} mpv_event;
int mpv_event_to_node(mpv_node *dst, mpv_event *src);
int mpv_request_event(mpv_handle *ctx, mpv_event_id event, int enable);
int mpv_request_log_messages(mpv_handle *ctx, const char *min_level);
mpv_event *mpv_wait_event(mpv_handle *ctx, double timeout);
void mpv_wakeup(mpv_handle *ctx);