lib/mpv_bindings.dart


  /// Get a notification whenever the given property changes. You will receive
  /// updates as MPV_EVENT_PROPERTY_CHANGE. Note that this is not very precise:
  /// for some properties, it may not send updates even if the property changed.
  /// This depends on the property, and it's a valid feature request to ask for
  /// better update handling of a specific property. (For some properties, like
  /// ``clock``, which shows the wall clock, this mechanism doesn't make too
  /// much sense anyway.)
  ///
  /// Property changes are coalesced: the change events are returned only once the
  /// event queue becomes empty (e.g. mpv_wait_event() would block or return
  /// MPV_EVENT_NONE), and then only one event per changed property is returned.
  ///
  /// You always get an initial change notification. This is meant to initialize
  /// the user's state to the current value of the property.
  ///
  /// Normally, change events are sent only if the property value changes according
  /// to the requested format. mpv_event_property will contain the property value
  /// as data member.
  ///
  /// Warning: if a property is unavailable or retrieving it caused an error,
  /// MPV_FORMAT_NONE will be set in mpv_event_property, even if the
  /// format parameter was set to a different value. In this case, the
  /// mpv_event_property.data field is invalid.
  ///
  /// If the property is observed with the format parameter set to MPV_FORMAT_NONE,
  /// you get low-level notifications whether the property _may_ have changed, and
  /// the data member in mpv_event_property will be unset. With this mode, you
  /// will have to determine yourself whether the property really changed. On the
  /// other hand, this mechanism can be faster and uses less resources.
  ///
  /// Observing a property that doesn't exist is allowed. (Although it may still
  /// cause some sporadic change events.)
  ///
  /// Keep in mind that you will get change notifications even if you change a
  /// property yourself. Try to avoid endless feedback loops, which could happen
  /// if you react to the change notifications triggered by your own change.
  ///
  /// Only the mpv_handle on which this was called will receive the property
  /// change events, or can unobserve them.
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param reply_userdata This will be used for the mpv_event.reply_userdata
  /// field for the received MPV_EVENT_PROPERTY_CHANGE
  /// events. (Also see section about asynchronous calls,
  /// although this function is somewhat different from
  /// actual asynchronous calls.)
  /// If you have no use for this, pass 0.
  /// Also see mpv_unobserve_property().
  /// @param name The property name.
  /// @param format see enum mpv_format. Can be MPV_FORMAT_NONE to omit values
  /// from the change events.
  /// @return error code (usually fails only on OOM or unsupported format)
  int mpv_observe_property(
    ffi.Pointer<mpv_handle> mpv,
    int reply_userdata,
    ffi.Pointer<ffi.Char> name,
    int format,
  ) {
    return _mpv_observe_property(
      mpv,
      reply_userdata,
      name,
      format,
    );
  }

  late final _mpv_observe_propertyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('mpv_observe_property');
  late final _mpv_observe_property = _mpv_observe_propertyPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, int, ffi.Pointer<ffi.Char>, int)>();

  /// Undo mpv_observe_property(). This will remove all observed properties for
  /// which the given number was passed as reply_userdata to mpv_observe_property.
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param registered_reply_userdata ID that was passed to mpv_observe_property
  /// @return negative value is an error code, >=0 is number of removed properties
  /// on success (includes the case when 0 were removed)
  int mpv_unobserve_property(
    ffi.Pointer<mpv_handle> mpv,
    int registered_reply_userdata,
  ) {
    return _mpv_unobserve_property(
      mpv,
      registered_reply_userdata,
    );
  }

  late final _mpv_unobserve_propertyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_handle>, ffi.Int)>>('mpv_unobserve_property');
  late final _mpv_unobserve_property = _mpv_unobserve_propertyPtr
      .asFunction<int Function(ffi.Pointer<mpv_handle>, int)>();

  /// Return a string describing the event. For unknown events, NULL is returned.
  ///
  /// Note that all events actually returned by the API will also yield a non-NULL
  /// string with this function.
  ///
  /// @param event event ID, see see enum mpv_event_id
  /// @return A static string giving a short symbolic name of the event. It
  /// consists of lower-case alphanumeric characters and can include "-"
  /// characters. This string is suitable for use in e.g. scripting
  /// interfaces.
  /// The string is completely static, i.e. doesn't need to be deallocated,
  /// and is valid forever.
  ffi.Pointer<ffi.Char> mpv_event_name(
    int event,
  ) {
    return _mpv_event_name(
      event,
    );
  }

  late final _mpv_event_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'mpv_event_name');
  late final _mpv_event_name =
      _mpv_event_namePtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Convert the given src event to a mpv_node, and set *dst to the result. *dst
  /// is set to a MPV_FORMAT_NODE_MAP, with fields for corresponding mpv_event and
  /// mpv_event.data/mpv_event_* fields.
  ///
  /// The exact details are not completely documented out of laziness. A start
  /// is located in the "Events" section of the manpage.
  ///
  /// *dst may point to newly allocated memory, or pointers in mpv_event. You must
  /// copy the entire mpv_node if you want to reference it after mpv_event becomes
  /// invalid (such as making a new mpv_wait_event() call, or destroying the
  /// mpv_handle from which it was returned). Call mpv_free_node_contents() to free
  /// any memory allocations made by this API function.
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param dst Target. This is not read and fully overwritten. Must be released
  /// with mpv_free_node_contents(). Do not write to pointers returned
  /// by it. (On error, this may be left as an empty node.)
  /// @param src The source event. Not modified (it's not const due to the author's
  /// prejudice of the C version of const).
  /// @return error code (MPV_ERROR_NOMEM only, if at all)
  int mpv_event_to_node(
    ffi.Pointer<mpv_node> dst,
    ffi.Pointer<mpv_event> src,
  ) {
    return _mpv_event_to_node(
      dst,
      src,
    );
  }

  late final _mpv_event_to_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_node>,
              ffi.Pointer<mpv_event>)>>('mpv_event_to_node');
  late final _mpv_event_to_node = _mpv_event_to_nodePtr.asFunction<
      int Function(ffi.Pointer<mpv_node>, ffi.Pointer<mpv_event>)>();

  /// Enable or disable the given event.
  ///
  /// Some events are enabled by default. Some events can't be disabled.
  ///
  /// (Informational note: currently, all events are enabled by default, except
  /// MPV_EVENT_TICK.)
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param event See enum mpv_event_id.
  /// @param enable 1 to enable receiving this event, 0 to disable it.
  /// @return error code
  int mpv_request_event(
    ffi.Pointer<mpv_handle> ctx,
    int event,
    int enable,
  ) {
    return _mpv_request_event(
      ctx,
      event,
      enable,
    );
  }

  late final _mpv_request_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Int32,
              ffi.Int)>>('mpv_request_event');
  late final _mpv_request_event = _mpv_request_eventPtr
      .asFunction<int Function(ffi.Pointer<mpv_handle>, int, int)>();

  /// Enable or disable receiving of log messages. These are the messages the
  /// command line player prints to the terminal. This call sets the minimum
  /// required log level for a message to be received with MPV_EVENT_LOG_MESSAGE.
  ///
  /// @param min_level Minimal log level as string. Valid log levels:
  /// no fatal error warn info v debug trace
  /// The value "no" disables all messages. This is the default.
  /// An exception is the value "terminal-default", which uses the
  /// log level as set by the "--msg-level" option. This works
  /// even if the terminal is disabled. (Since API version 1.19.)
  /// Also see mpv_log_level.
  /// @return error code
  int mpv_request_log_messages(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> min_level,
  ) {
    return _mpv_request_log_messages(
      ctx,
      min_level,
    );
  }

  late final _mpv_request_log_messagesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_request_log_messages');
  late final _mpv_request_log_messages =
      _mpv_request_log_messagesPtr.asFunction<
          int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// Wait for the next event, or until the timeout expires, or if another thread
  /// makes a call to mpv_wakeup(). Passing 0 as timeout will never wait, and
  /// is suitable for polling.
  ///
  /// The internal event queue has a limited size (per client handle). If you
  /// don't empty the event queue quickly enough with mpv_wait_event(), it will
  /// overflow and silently discard further events. If this happens, making
  /// asynchronous requests will fail as well (with MPV_ERROR_EVENT_QUEUE_FULL).
  ///
  /// Only one thread is allowed to call this on the same mpv_handle at a time.
  /// The API won't complain if more than one thread calls this, but it will cause
  /// race conditions in the client when accessing the shared mpv_event struct.
  /// Note that most other API functions are not restricted by this, and no API
  /// function internally calls mpv_wait_event(). Additionally, concurrent calls
  /// to different mpv_handles are always safe.
  ///
  /// As long as the timeout is 0, this is safe to be called from mpv render API
  /// threads.
  ///
  /// @param timeout Timeout in seconds, after which the function returns even if
  /// no event was received. A MPV_EVENT_NONE is returned on
  /// timeout. A value of 0 will disable waiting. Negative values
  /// will wait with an infinite timeout.
  /// @return A struct containing the event ID and other data. The pointer (and
  /// fields in the struct) stay valid until the next mpv_wait_event()
  /// call, or until the mpv_handle is destroyed. You must not write to
  /// the struct, and all memory referenced by it will be automatically
  /// released by the API on the next mpv_wait_event() call, or when the
  /// context is destroyed. The return value is never NULL.
  ffi.Pointer<mpv_event> mpv_wait_event(
    ffi.Pointer<mpv_handle> ctx,
    double timeout,
  ) {
    return _mpv_wait_event(
      ctx,
      timeout,
    );
  }

  late final _mpv_wait_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<mpv_event> Function(
              ffi.Pointer<mpv_handle>, ffi.Double)>>('mpv_wait_event');
  late final _mpv_wait_event = _mpv_wait_eventPtr.asFunction<
      ffi.Pointer<mpv_event> Function(ffi.Pointer<mpv_handle>, double)>();
